@@ -17,6 +17,7 @@ Bug Fixes Since 3.1:
 
 CAY-1964 Fix convertAdditionalDataMaps() in CayenneGeneratorMojo.java
 CAY-1973 error while generating classes
+CAY-1978 ESCAPE clause should be included in LIKE parenthesis
 
 ----------------------------------
 Release: 3.1-final
